Fix extra space on safari, remove padding from music button

--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -17,7 +17,13 @@ body {
 
 body {
     font-family: arial;
+}
+
+#clockContainer {
+    width: 100%;
+    height: 100%;
     overflow: hidden;
+    position: fixed;
 }
 
 .centeredColumn {
@@ -67,6 +73,7 @@ body {
     border: none;
     outline: none;
     border-radius: 0px 5px 5px 0;
+    margin: 0;
 }
 
 #featuredContent {
